<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">News App With Dagger2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" tools:ignore="MissingTranslation">Hello blank fragment</string>
    <string name="bookmarks" tools:ignore="ExtraTranslation">Bookmarks</string>
    <string name="savedarticlestothelibrary" tools:ignore="ExtraTranslation">Saved articles to the library</string>
    <string name="info" translatable="false" tools:ignore="ExtraTranslation">You have not saved any articles yet. Start reading and bookmarking them now</string>

    <string name="browse" tools:ignore="ExtraTranslation">Browse</string>
    <string name="discoverthingsofthisworld" tools:ignore="ExtraTranslation">Discover things of this world</string>
    <string name="recommendedforyou" tools:ignore="ExtraTranslation">Recommended for you</string>
    <string name="seeall" tools:ignore="ExtraTranslation">See All</string>

    <string name="categories" tools:ignore="ExtraTranslation">Categories</string>
    <string name="thousandsofarticlesineachcategory" tools:ignore="ExtraTranslation">Thousands of articles in each category</string>

    <string name="selectyourfavoritetopics" tools:ignore="ExtraTranslation">Select your favorite topics</string>
    <string name="selectsomeofyourfavoritetopicstoletussuggestbetternewsforyou." tools:ignore="ExtraTranslation">Select some of your favorite topics to let us suggest better news for you.</string>
    <string name="next" tools:ignore="ExtraTranslation">Next</string>
    <string name="getstarted" tools:ignore="ExtraTranslation">Get Started</string>

    <string name="settings" tools:ignore="ExtraTranslation">Settings</string>
    <string name="lightmode" tools:ignore="ExtraTranslation">Light Mode</string>
    <string name="language" tools:ignore="ExtraTranslation">Language</string>
</resources>